--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <!-- HERO -->
   <section id="hero" class="hero">
     <div class="container">
-      <h1>ЭПОПЕЯ — статус вне ограничений</h1>
+      <h1>СВО — статус вне ограничений</h1>
       <p class="subtitle">Уникальные автомобили, которые не похожи ни на что.</p>
     </div>
   </section>
@@ -40,12 +40,12 @@
       <h2>Характеристики</h2>
       <div class="spec-grid">
         <div class="spec-card">
-          <h3>Мощность</h3>
-          <p>1200 л.с.</p>
+          <h3>Двигатель</h3>
+          <p>V10 2228 л.с.</p>
         </div>
         <div class="spec-card">
-          <h3>Скорость</h3>
-          <p>до 350 км/ч</p>
+          <h3>Разгон</h3>
+          <p>0-100 1,2 секунды</p>
         </div>
         <div class="spec-card">
           <h3>Дизайн</h3>
@@ -86,7 +86,7 @@
           <img src="anapovskiy_mazut_w4.png" alt="Анапский мазут">
           <div class="car-info">
             <h3>Анапский мазут</h3>
-            <p>Лимитированная коллекция под заказ.</p>
+            <p>С первыми в мире золотыми дисками.</p>
           </div>
         </div>
 
@@ -94,7 +94,7 @@
           <img src="zadumchivaya_sliva_w4.png" alt="Задумчивая слива">
           <div class="car-info">
             <h3>Задумчивая слива</h3>
-            <p>Идеальный городской стиль.</p>
+            <p>"Анаповский мазут" ее BRAT and it’s the same but new color so it’s not</p>
           </div>
         </div>
 
@@ -102,7 +102,7 @@
           <img src="gzhel_w4.png" alt="Гжель">
           <div class="car-info">
             <h3>Гжель</h3>
-            <p>Спорт и контроль в одном.</p>
+            <p>Специальный заказ Марии Мамаевой.</p>
           </div>
         </div>
 
@@ -110,7 +110,7 @@
           <img src="ashkudishka_w4.png" alt="Ашкудишка Личи">
           <div class="car-info">
             <h3>Ашкудишка Личи</h3>
-            <p>Эксклюзивный дизайн и яркий стиль.</p>
+            <p>Все узнают ваш вкус.</p>
           </div>
         </div>
 
@@ -118,7 +118,7 @@
           <img src="heroin_needle_w1.png" alt="Героиновая игла">
           <div class="car-info">
             <h3>Героиновая игла</h3>
-            <p>Максимальная агрессия и скорость.</p>
+            <p>!Героин в комплект не входит!</p>
           </div>
         </div>
 
@@ -126,7 +126,7 @@
           <img src="coca_cola_zero_w4.png" alt="CocaCola Zero">
           <div class="car-info">
             <h3>CocaCola Zero</h3>
-            <p>Лаконичный стиль и премиум-качество.</p>
+            <p>Хочешь есть - попей водички.</p>
           </div>
         </div>
 
@@ -134,7 +134,7 @@
           <img src="hohloma_w4.png" alt="Хохлома">
           <div class="car-info">
             <h3>Хохлома</h3>
-            <p>Народная роспись в современном исполнении.</p>
+            <p>Автомобиль премиум класса дающий в рот BUGATTI.</p>
           </div>
         </div>
 
@@ -145,35 +145,35 @@
   <!-- НАШИ МОДЕЛИ -->
   <section id="models" class="luxury-section">
     <div class="container">
-      <h2>Наши модели</h2>
+      <h2>Цены</h2>
       <div class="model-grid">
         <div class="model-card">
           <h3>Анапский мазут</h3>
-          <p>Агрессивный дизайн, максимальная скорость, эксклюзив.</p>
+          <p>От 420 000$.</p>
         </div>
         <div class="model-card">
           <h3>Задумчивая слива</h3>
-          <p>Городской стиль, комфорт, плавность.</p>
+          <p>666 666$</p>
         </div>
         <div class="model-card">
           <h3>Гжель</h3>
-          <p>Спорт, контроль, динамика.</p>
+          <p>По договоренности.</p>
         </div>
         <div class="model-card">
           <h3>Ашкудишка Личи</h3>
-          <p>Эксклюзивная раскраска, уникальный стиль.</p>
+          <p>520 000$.</p>
         </div>
         <div class="model-card">
           <h3>Героиновая игла</h3>
-          <p>Уличный стиль, агрессия, скорость.</p>
+          <p>690 000$.</p>
         </div>
         <div class="model-card">
           <h3>CocaCola Zero</h3>
-          <p>Лаконичность, премиум, минимализм.</p>
+          <p>По договоренности.</p>
         </div>
         <div class="model-card">
           <h3>Хохлома</h3>
-          <p>Народная роспись в современном исполнении.</p>
+          <p>670 000$.</p>
         </div>
       </div>
     </div>
@@ -197,7 +197,6 @@
               <option value="zadumchivaya_sliva">Задумчивая слива</option>
               <option value="gzhel">Гжель</option>
               <option value="ashkudishka">Ашкудишка Личи</option>
-              <option value="heroin_needle">Героиновая игла</option>
               <option value="coca_cola_zero">CocaCola Zero</option>
               <option value="hohloma">Хохлома</option>
             </select>
@@ -206,10 +205,10 @@
           <label>
             Диски
             <select id="wheelSelect">
-              <option value="1">Диски 1</option>
-              <option value="2">Диски 2</option>
-              <option value="3">Диски 3</option>
-              <option value="4">Диски 4</option>
+              <option value="1">Кованная роскошь</option>
+              <option value="2">Германское качество</option>
+              <option value="3">Болгартти</option>
+              <option value="4">Классика</option>
             </select>
           </label>
         </div>
@@ -222,9 +221,15 @@
     <div class="container">
       <h2>Отзывы</h2>
       <div class="reviews-grid">
-        <div class="review-card"><img src="review1.png" alt="Отзыв 1"></div>
-        <div class="review-card"><img src="review2.png" alt="Отзыв 2"></div>
-        <div class="review-card"><img src="review3.png" alt="Отзыв 3"></div>
+        <img src="review1.png" alt="Отзыв 1">
+        <p>⭐️⭐️⭐️⭐️⭐️<br>После Эпопеи - Bugatti перестал заводиться. Bugatti больше не впечатляет</p>
+        <strong>Мэри, Нижний Новгород</strong>
+      </div>
+
+      <div class="review">
+        <img src="review2.png" alt="Отзыв 2">
+        <p>⭐️⭐️⭐️⭐️⭐️<br>Купила, продала квартиру, но оно того стоило</p>
+        <strong>Ира, Минск</strong>
       </div>
     </div>
   </section>
@@ -236,11 +241,11 @@
       <div class="contact-grid">
         <div class="contact-card">
           <h3>Телефон</h3>
-          <p>+7#######</p>
+          <p>+7XXXXXXXXXX</p>
         </div>
         <div class="contact-card">
           <h3>Адрес</h3>
-          <p>######</p>
+          <p>г. Нижний Новгород, ул. Зайцева, 27</p>
         </div>
         <div class="contact-card">
           <h3>Форма связи</h3>
@@ -261,7 +266,7 @@
 
     <!-- ЗДЕСЬ ВСТАВЬ СВОЮ GOOGLE FORM -->
     <iframe
-      src="https://docs.google.com/forms/d/e/1FAIpQLSfD...YOUR_FORM_LINK.../viewform?embedded=true"
+      src="https://forms.gle/aAhL5npzb7wavbUP7"
       width="100%"
       height="600"
       frameborder="0"
