--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </div>
 
         <div class="car-card">
-          <img src="coca_cola_zero_w4.png" alt="CocaCola Zero">
+          <img src="cocacola_zero_w4.png" alt="CocaCola Zero">
           <div class="car-info">
             <h3>CocaCola Zero</h3>
             <p>Хочешь есть - попей водички.</p>
@@ -197,7 +197,7 @@
               <option value="zadumchivaya_sliva">Задумчивая слива</option>
               <option value="gzhel">Гжель</option>
               <option value="ashkudishka">Ашкудишка Личи</option>
-              <option value="coca_cola_zero">CocaCola Zero</option>
+              <option value="cocacola_zero">CocaCola Zero</option>
               <option value="hohloma">Хохлома</option>
             </select>
           </label>
