--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ЭПОПЕЯ</title>
+  <title>СВО</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -30,7 +30,7 @@
   <section id="hero" class="hero">
     <div class="container">
       <h1>СВО — статус вне ограничений</h1>
-      <p class="subtitle">Уникальные автомобили, которые не похожи ни на что.</p>
+      <p class="subtitle">Уникальные автомобили "ЭПОПЕЯ", которые не похожи ни на что.</p>
     </div>
   </section>
 
