--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a href="#specs">Характеристики</a>
       <a href="#unique">Уникальность</a>
       <a href="#collection">Коллекция</a>
-      <a href="#models">Наши модели</a>
+      <a href="#models">Цены</a>
       <a href="#disks">Выбери свои диски</a>
       <a href="#reviews">Отзывы</a>
       <a href="#contact">Контакты</a>
