--- a/index.html
+++ b/index.html
@@ -3,20 +3,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>СВО</title>
+  <title>ЭПОПЕЯ</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
 <header class="header">
   <div class="container header-inner">
-    <div class="logo">ЭПОПЕЯ</div>
+    <div class="logo">
+      <span class="logo-glow">ЭПОПЕЯ</span>
+    </div>
     <nav class="nav">
       <a href="#hero">Главная</a>
       <a href="#specs">Характеристики</a>
       <a href="#unique">Уникальность</a>
       <a href="#collection">Коллекция</a>
-      <a href="#models">Цены</a>
+      <a href="#models">Наши модели</a>
       <a href="#disks">Выбери свои диски</a>
       <a href="#reviews">Отзывы</a>
       <a href="#contact">Контакты</a>
@@ -29,8 +31,8 @@
   <!-- HERO -->
   <section id="hero" class="hero">
     <div class="container">
-      <h1>СВО — статус вне ограничений</h1>
-      <p class="subtitle">Уникальные автомобили "ЭПОПЕЯ", которые не похожи ни на что.</p>
+      <h1 class="hero-title">СВО — статус вне ограничений</h1>
+      <p class="subtitle">Уникальные автомобили, которые не похожи ни на что.</p>
     </div>
   </section>
 
@@ -39,15 +41,15 @@
     <div class="container">
       <h2>Характеристики</h2>
       <div class="spec-grid">
-        <div class="spec-card">
+        <div class="spec-card card-glow">
           <h3>Двигатель</h3>
           <p>V10 2228 л.с.</p>
         </div>
-        <div class="spec-card">
+        <div class="spec-card card-glow">
           <h3>Разгон</h3>
           <p>0-100 1,2 секунды</p>
         </div>
-        <div class="spec-card">
+        <div class="spec-card card-glow">
           <h3>Дизайн</h3>
           <p>Эксклюзивный стиль</p>
         </div>
@@ -60,15 +62,15 @@
     <div class="container">
       <h2>Уникальность</h2>
       <div class="unique-grid">
-        <div class="spec-card">
+        <div class="spec-card card-glow">
           <h3>Индивидуальность</h3>
           <p>Каждая модель — отдельное произведение искусства.</p>
         </div>
-        <div class="spec-card">
+        <div class="spec-card card-glow">
           <h3>Ручная сборка</h3>
           <p>Внимание к деталям на каждом этапе.</p>
         </div>
-        <div class="spec-card">
+        <div class="spec-card card-glow">
           <h3>Лимитированная серия</h3>
           <p>Только ограниченное количество.</p>
         </div>
@@ -81,8 +83,7 @@
     <div class="container">
       <h2>Коллекция</h2>
       <div class="collection-grid">
-
-        <div class="car-card">
+        <div class="car-card card-glow">
           <img src="anapovskiy_mazut_w4.png" alt="Анапский мазут">
           <div class="car-info">
             <h3>Анапский мазут</h3>
@@ -90,7 +91,7 @@
           </div>
         </div>
 
-        <div class="car-card">
+        <div class="car-card card-glow">
           <img src="zadumchivaya_sliva_w4.png" alt="Задумчивая слива">
           <div class="car-info">
             <h3>Задумчивая слива</h3>
@@ -98,7 +99,7 @@
           </div>
         </div>
 
-        <div class="car-card">
+        <div class="car-card card-glow">
           <img src="gzhel_w4.png" alt="Гжель">
           <div class="car-info">
             <h3>Гжель</h3>
@@ -106,7 +107,7 @@
           </div>
         </div>
 
-        <div class="car-card">
+        <div class="car-card card-glow">
           <img src="ashkudishka_w4.png" alt="Ашкудишка Личи">
           <div class="car-info">
             <h3>Ашкудишка Личи</h3>
@@ -114,7 +115,7 @@
           </div>
         </div>
 
-        <div class="car-card">
+        <div class="car-card card-glow">
           <img src="heroin_needle_w1.png" alt="Героиновая игла">
           <div class="car-info">
             <h3>Героиновая игла</h3>
@@ -122,7 +123,7 @@
           </div>
         </div>
 
-        <div class="car-card">
+        <div class="car-card card-glow">
           <img src="cocacola_zero_w4.png" alt="CocaCola Zero">
           <div class="car-info">
             <h3>CocaCola Zero</h3>
@@ -130,14 +131,13 @@
           </div>
         </div>
 
-        <div class="car-card">
+        <div class="car-card card-glow">
           <img src="hohloma_w4.png" alt="Хохлома">
           <div class="car-info">
             <h3>Хохлома</h3>
             <p>Автомобиль премиум класса дающий в рот BUGATTI.</p>
           </div>
         </div>
-
       </div>
     </div>
   </section>
@@ -147,33 +147,33 @@
     <div class="container">
       <h2>Цены</h2>
       <div class="model-grid">
-        <div class="model-card">
+        <div class="model-card card-glow">
           <h3>Анапский мазут</h3>
-          <p>От 420 000$.</p>
+          <p><span class="currency">₽</span> 420 000$</p>
         </div>
-        <div class="model-card">
+        <div class="model-card card-glow">
           <h3>Задумчивая слива</h3>
-          <p>666 666$</p>
+          <p><span class="currency">₽</span> 666 666$</p>
         </div>
-        <div class="model-card">
+        <div class="model-card card-glow">
           <h3>Гжель</h3>
-          <p>По договоренности.</p>
+          <p><span class="currency">₽</span> По договоренности</p>
         </div>
-        <div class="model-card">
+        <div class="model-card card-glow">
           <h3>Ашкудишка Личи</h3>
-          <p>520 000$.</p>
+          <p><span class="currency">₽</span> 520 000$</p>
         </div>
-        <div class="model-card">
+        <div class="model-card card-glow">
           <h3>Героиновая игла</h3>
-          <p>690 000$.</p>
+          <p><span class="currency">₽</span> 690 000$</p>
         </div>
-        <div class="model-card">
+        <div class="model-card card-glow">
           <h3>CocaCola Zero</h3>
-          <p>По договоренности.</p>
+          <p><span class="currency">₽</span> По договоренности</p>
         </div>
-        <div class="model-card">
+        <div class="model-card card-glow">
           <h3>Хохлома</h3>
-          <p>670 000$.</p>
+          <p><span class="currency">₽</span> 670 000$</p>
         </div>
       </div>
     </div>
@@ -185,11 +185,11 @@
       <h2>Выбери свои диски</h2>
 
       <div class="style-builder">
-        <div class="style-preview">
+        <div class="style-preview card-glow-static">
           <img id="carImage" class="car-image" src="anapovskiy_mazut_w1.png" alt="Автомобиль">
         </div>
 
-        <div class="style-controls">
+        <div class="style-controls card-glow-static">
           <label>
             Модель
             <select id="modelSelect">
@@ -220,16 +220,19 @@
   <section id="reviews" class="luxury-section">
     <div class="container">
       <h2>Отзывы</h2>
-      <div class="reviews-grid">
-        <img src="review1.png" alt="Отзыв 1">
-        <p>⭐️⭐️⭐️⭐️⭐️<br>После Эпопеи - Bugatti перестал заводиться. Bugatti больше не впечатляет</p>
-        <strong>Мэри, Нижний Новгород</strong>
-      </div>
 
-      <div class="review">
-        <img src="review2.png" alt="Отзыв 2">
-        <p>⭐️⭐️⭐️⭐️⭐️<br>Купила, продала квартиру, но оно того стоило</p>
-        <strong>Ира, Минск</strong>
+      <div class="reviews-grid">
+        <div class="review-card card-glow">
+          <img src="review1.png" alt="Отзыв 1">
+          <p>⭐️⭐️⭐️⭐️⭐️<br>После Эпопеи - Bugatti перестал заводиться. Bugatti больше не впечатляет</p>
+          <strong>Мэри, Нижний Новгород</strong>
+        </div>
+
+        <div class="review-card card-glow">
+          <img src="review2.png" alt="Отзыв 2">
+          <p>⭐️⭐️⭐️⭐️⭐️<br>Купила, продала квартиру, но оно того стоило</p>
+          <strong>Ира, Минск</strong>
+        </div>
       </div>
     </div>
   </section>
@@ -239,15 +242,15 @@
     <div class="container">
       <h2>Контакты</h2>
       <div class="contact-grid">
-        <div class="contact-card">
+        <div class="contact-card card-glow">
           <h3>Телефон</h3>
           <p>+7XXXXXXXXXX</p>
         </div>
-        <div class="contact-card">
+        <div class="contact-card card-glow">
           <h3>Адрес</h3>
           <p>г. Нижний Новгород, ул. Зайцева, 27</p>
         </div>
-        <div class="contact-card">
+        <div class="contact-card card-glow">
           <h3>Форма связи</h3>
           <p>Нажмите “Связаться” — откроется форма.</p>
           <button class="btn" id="openModalBtn2">Связаться</button>
@@ -255,7 +258,6 @@
       </div>
     </div>
   </section>
-
 </main>
 
 <!-- MODAL -->
@@ -264,7 +266,7 @@
     <span class="close" id="modalClose">&times;</span>
     <h3>Оставьте заявку</h3>
 
-    <!-- ЗДЕСЬ ВСТАВЬ СВОЮ GOOGLE FORM -->
+    <!-- Google Form -->
     <iframe
       src="https://forms.gle/aAhL5npzb7wavbUP7"
       width="100%"
@@ -274,7 +276,6 @@
       marginwidth="0">
       Загрузка…
     </iframe>
-
   </div>
 </div>
 
