--- a/index.html
+++ b/index.html
@@ -224,18 +224,28 @@
       <div class="reviews-grid">
         <div class="review-card card-glow">
           <img src="review1.png" alt="Отзыв 1">
-          <p>⭐️⭐️⭐️⭐️⭐️<br>После Эпопеи - Bugatti перестал заводиться. Bugatti больше не впечатляет</p>
+          <p>⭐️⭐️⭐️⭐️⭐️<br>Прошел месяц. После Эпопеи - Bugatti перестал заводиться. Bugatti больше не впечатляет</p>
           <strong>Мэри, Нижний Новгород</strong>
         </div>
 
         <div class="review-card card-glow">
           <img src="review2.png" alt="Отзыв 2">
           <p>⭐️⭐️⭐️⭐️⭐️<br>Купила, продала квартиру, но оно того стоило</p>
-          <strong>Ира, Минск</strong>
-        </div>
+        <strong>Ира, Минск</strong>
       </div>
+
+      <!-- ВИДЕО ОТЗЫВ -->
+      <div class="review-card card-glow">
+        <video class="review-video" autoplay muted loop playsinline>
+          <source src="video-review.mp4" type="video/mp4">
+        </video>
+        <p>⭐️⭐️⭐️⭐️⭐️<br>Я В ШОКЕ!</p>
+        <strong>Мэри, Нижний Новгород</strong>
+      </div>
+
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- КОНТАКТЫ -->
   <section id="contact" class="luxury-section">
