--- a/index.html
+++ b/index.html
@@ -235,13 +235,12 @@
       </div>
 
       <!-- ВИДЕО ОТЗЫВ -->
-      <div class="review-card card-glow">
-        <video class="review-video" autoplay muted loop playsinline>
-          <source src="video-review.mp4" type="video/mp4">
-        </video>
-        <p>⭐️⭐️⭐️⭐️⭐️<br>Я В ШОКЕ!</p>
-        <strong>Мэри, Нижний Новгород</strong>
-      </div>
+<div class="video-wrapper">
+  <video id="reviewVideo" class="review-video" controls muted>
+    <source src="video_review.mp4" type="video/mp4">
+  </video>
+  <button id="videoBtn" class="video-btn">🔊 Включить звук</button>
+</div>
 
     </div>
   </div>
