--- a/index.html
+++ b/index.html
@@ -234,10 +234,11 @@
         <strong>Ира, Минск</strong>
       </div>
 
-      <!-- ВИДЕО ОТЗЫВ -->
+<!-- ВИДЕО ОТЗЫВ -->
 <div class="video-wrapper">
-  <video id="reviewVideo" class="review-video" controls muted>
+  <video id="reviewVideo" class="review-video" controls muted preload="metadata">
     <source src="video_review.mp4" type="video/mp4">
+    Ваш браузер не поддерживает видео.
   </video>
   <button id="videoBtn" class="video-btn">🔊 Включить звук</button>
 </div>
