--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
 
     <!-- Google Form -->
     <iframe
-      src="https://forms.gle/aAhL5npzb7wavbUP7"
+      src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfbQetzN7Q9iTNP_1kSLPTCkOw82mdxzgcBCYHa6gpnsdiPSQ/viewform?embedded=true"</iframe>"
       width="100%"
       height="600"
       frameborder="0"
