--- a/index.html
+++ b/index.html
@@ -278,13 +278,7 @@
 
     <!-- Google Form -->
     <iframe
-      src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfbQetzN7Q9iTNP_1kSLPTCkOw82mdxzgcBCYHa6gpnsdiPSQ/viewform?embedded=true"</iframe>"
-      width="100%"
-      height="600"
-      frameborder="0"
-      marginheight="0"
-      marginwidth="0">
-      Загрузка…
+      src="<iframe src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfbQetzN7Q9iTNP_1kSLPTCkOw82mdxzgcBCYHa6gpnsdiPSQ/viewform?embedded=true" width="640" height="684" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>"
     </iframe>
   </div>
 </div>
