--- a/index.html
+++ b/index.html
@@ -235,14 +235,17 @@
       </div>
 
 <!-- ВИДЕО ОТЗЫВ -->
-<div class="video-wrapper">
-  <video id="reviewVideo" class="review-video" controls muted preload="metadata">
-    <source src="video_review.mp4" type="video/mp4">
+<div class="video-review">
+  <video id="reviewVideo" width="100%" controls>
+    <source src="review.mp4" type="video/mp4">
     Ваш браузер не поддерживает видео.
   </video>
-  <button id="videoBtn" class="video-btn">🔊 Включить звук</button>
-</div>
 
+  <div class="video-controls">
+    <button id="playPauseBtn">Пауза</button>
+    <button id="muteBtn">Звук</button>
+  </div>
+</div>
     </div>
   </div>
 </section>
