--- a/index.html
+++ b/index.html
@@ -280,9 +280,15 @@
     <h3>Оставьте заявку</h3>
 
     <!-- Google Form -->
-    <iframe
-      src="<iframe src="<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfbQetzN7Q9iTNP_1kSLPTCkOw82mdxzgcBCYHa6gpnsdiPSQ/viewform?embedded=true" width="640" height="684" frameborder="0" marginheight="0" marginwidth="0">Загрузка…</iframe>"
-    </iframe>
+<iframe 
+  src="https://docs.google.com/forms/d/e/1FAIpQLSfbQetzN7Q9iTNP_1kSLPTCkOw82mdxzgcBCYHa6gpnsdiPSQ/viewform?embedded=true" 
+  width="640" 
+  height="684" 
+  frameborder="0" 
+  marginheight="0" 
+  marginwidth="0">
+  Загрузка…
+</iframe>
   </div>
 </div>
 
