--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
 
 <!-- ВИДЕО ОТЗЫВ -->
 <div class="video-review">
-  <video id="reviewVideo" width="100%" controls>
-    <source src="review.mp4" type="video/mp4">
-    Ваш браузер не поддерживает видео.
-  </video>
+<video id="reviewVideo" width="320" height="568" controls>
+  <source src="video.mp4" type="video/mp4">
+  Ваш браузер не поддерживает видео.
+</video>
 
   <div class="video-controls">
     <button id="playPauseBtn">Пауза</button>
