--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@
       <div class="reviews-grid">
         <div class="review-card card-glow">
           <img src="review1.png" alt="Отзыв 1">
-          <p>⭐️⭐️⭐️⭐️⭐️<br>Прошел месяц. После Эпопеи - Bugatti перестал заводиться. Bugatti больше не впечатляет</p>
+          <p>⭐️⭐️⭐️⭐️⭐️<br>Прошел месяц после покупки. После Эпопеи - Bugatti перестал заводиться. Bugatti больше не впечатляет</p>
           <strong>Мэри, Нижний Новгород</strong>
         </div>
 
         <div class="review-card card-glow">
           <img src="review2.png" alt="Отзыв 2">
-          <p>⭐️⭐️⭐️⭐️⭐️<br>Купила, продала квартиру, но оно того стоило</p>
+          <p>⭐️⭐️⭐️⭐️⭐️<br>Купила, продала квартиру, но оно того стоило.</p>
         <strong>Ира, Минск</strong>
       </div>
 
@@ -250,7 +250,7 @@
 
   <div class="video-desc">
     <h3>Видеоотзыв</h3>
-    <p>Смотреть отзыв прямо здесь — без переходов.</p>
+    <p>Мэри, Нижний Новгород.</p>
   </div>
 </div>
     </div>
