--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
       <div class="reviews-grid">
         <div class="review-card card-glow">
           <img src="review1.png" alt="Отзыв 1">
-          <p>⭐️⭐️⭐️⭐️⭐️<br>Прошел месяц после покупки. После Эпопеи - Bugatti перестал заводиться. Bugatti больше не впечатляет</p>
+          <p>⭐️⭐️⭐️⭐️⭐️<br>Прошел месяц с покупки. После Эпопеи - Bugatti перестал заводиться. Bugatti больше не впечатляет</p>
           <strong>Мэри, Нижний Новгород</strong>
         </div>
 
