--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
       <div class="model-grid">
         <div class="model-card card-glow">
           <h3>Анапский мазут</h3>
-          <p><span class="currency">₽</span> 420 000$</p>
+          <p><span class="currency">$</span> 420 000$</p>
         </div>
         <div class="model-card card-glow">
           <h3>Задумчивая слива</h3>
