--- a/index.html
+++ b/index.html
@@ -149,31 +149,31 @@
       <div class="model-grid">
         <div class="model-card card-glow">
           <h3>Анапский мазут</h3>
-          <p><span class="currency">$</span> 420 000$</p>
+          <p><span class="currency">$</span> 420 000</p>
         </div>
         <div class="model-card card-glow">
           <h3>Задумчивая слива</h3>
-          <p><span class="currency">₽</span> 666 666$</p>
+          <p><span class="currency">$</span> 666 666</p>
         </div>
         <div class="model-card card-glow">
           <h3>Гжель</h3>
-          <p><span class="currency">₽</span> По договоренности</p>
+          <p><span class="currency">$</span> По договоренности</p>
         </div>
         <div class="model-card card-glow">
           <h3>Ашкудишка Личи</h3>
-          <p><span class="currency">₽</span> 520 000$</p>
+          <p><span class="currency">$</span> 520 000</p>
         </div>
         <div class="model-card card-glow">
           <h3>Героиновая игла</h3>
-          <p><span class="currency">₽</span> 690 000$</p>
+          <p><span class="currency">$</span> 690 000</p>
         </div>
         <div class="model-card card-glow">
           <h3>CocaCola Zero</h3>
-          <p><span class="currency">₽</span> По договоренности</p>
+          <p><span class="currency">$</span> По договоренности</p>
         </div>
         <div class="model-card card-glow">
           <h3>Хохлома</h3>
-          <p><span class="currency">₽</span> 670 000$</p>
+          <p><span class="currency">$</span> 670 000</p>
         </div>
       </div>
     </div>
